crates/cockpit-editor/tests/snapshots/golden_vim__golden_command_write_quit.snap
---
source: crates/cockpit-editor/tests/golden_vim.rs
expression: "snapshot(\"command_wq\", &keys)"
---
case: command_wq
start_mode: Normal
steps:
  - key: Char(':')
    actions:
      - EnterMode(Command)
  - key: Char('w')
    actions: []
  - key: Char('q')
    actions: []
  - key: Enter
    actions:
      - EnterMode(Normal)
      - AppCommand(SaveQuit)
final_mode: Normal
