crates/cockpit-editor/tests/snapshots/golden_vim__golden_gg_and_dd.snap
---
source: crates/cockpit-editor/tests/golden_vim.rs
expression: "snapshot(\"gg_dd\", &chars(\"ggdd\"))"
---
case: gg_dd
start_mode: Normal
steps:
  - key: Char('g')
    actions: []
  - key: Char('g')
    actions:
      - Move(FileStart)
  - key: Char('d')
    actions: []
  - key: Char('d')
    actions:
      - DeleteLine(1)
final_mode: Normal
