crates/cockpit-editor/tests/snapshots/golden_vim__golden_open_line_below.snap
---
source: crates/cockpit-editor/tests/golden_vim.rs
expression: "snapshot(\"open_line_below\", &chars(\"o\"))"
---
case: open_line_below
start_mode: Normal
steps:
  - key: Char('o')
    actions:
      - Move(LineEnd)
      - InsertChar('\n')
      - EnterMode(Insert)
final_mode: Insert
