crates/cockpit-editor/tests/snapshots/golden_vim__golden_replace_char.snap
---
source: crates/cockpit-editor/tests/golden_vim.rs
expression: "snapshot(\"replace_char\", &chars(\"rx\"))"
---
case: replace_char
start_mode: Normal
steps:
  - key: Char('r')
    actions: []
  - key: Char('x')
    actions:
      - ReplaceChar('x')
      - Move(Left)
final_mode: Normal
