crates/cockpit-editor/tests/snapshots/golden_vim__golden_search.snap
---
source: crates/cockpit-editor/tests/golden_vim.rs
expression: "snapshot(\"search_foo\", &keys)"
---
case: search_foo
start_mode: Normal
steps:
  - key: Char('/')
    actions:
      - EnterMode(Search)
  - key: Char('f')
    actions: []
  - key: Char('o')
    actions: []
  - key: Char('o')
    actions: []
  - key: Enter
    actions:
      - EnterMode(Normal)
      - Search("foo")
final_mode: Normal
